[tool.poetry]
name = "har2locust"
version = "0.1.2"
description = ""
authors = ["S1M0N38 <bertolottosimone@gmail.com>", "CyberW <lars.holmberg@redshirt.se>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
black = "^20.8.0"
flake8 = "^3.8.4"

[tool.poetry.scripts]
har2locust = "har2locust.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
